--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,45 @@ i {
   cursor: pointer;
 }
 
+@media screen and (max-width: 478px) {
+  .container {
+    margin: 0px !important;
+    font-size: 1rem;
+  }
+
+  .pimage {
+    width: 300px !important;
+    height: 300px !important;
+  }
+
+  .login-container {
+    width: 300px !important;
+    height: 300px !important;
+  }
+  h1,
+  h2 {
+    margin: 15px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .login-container {
+    width: 370px;
+    height: 360px;
+    border-top-right-radius: 90px;
+    border-bottom-right-radius: 90px;
+  }
+}
+
 .container-lg {
-  /* background-color: #9989e2; */
-  width: 100%;
+  width: fit-content;
   height: 100vh;
 }
 
 .container {
   height: max-content;
   margin-top: 60px;
+  margin-left: 0px;
 }
 
 .form-con {
@@ -41,6 +71,18 @@ i {
   border-bottom-right-radius: 200px;
   background-image: url("../src/img/loginbg.jpg");
   background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 1340px) {
+  .card {
+    width: 173px !important;
+    display: flex !important;
+    flex-direction: row !important;
+  }
+
+  .card-body{
+    padding-left: 15px !important;
+  }
 }
 
 /* project */
@@ -69,6 +111,10 @@ i {
 .pfolder {
   color: #004085;
   font-size: 2rem;
+}
+
+.pnew {
+  margin-left: 30px;
 }
 
 /* operations */
@@ -101,4 +147,29 @@ i {
 
 .abouth1 {
   text-align: center;
+}
+
+.aboutPage {
+  font-size: 1.3rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.aboutPage ul {
+  list-style: square;
+  padding: 12px;
+}
+
+.aboutPage ul li {
+  padding: 12px;
+}
+
+.aboutLink {
+  color: #a50374;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.aboutLink:hover {
+  color: green;
 }
