--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ i {
 
 @media screen and (max-width: 478px) {
   .container {
-    margin: 0px 0px 0px 0px!important;
+    margin: 0px 0px 0px 0px !important;
     padding-right: 0px !important;
     font-size: 1rem;
   }
@@ -29,8 +29,8 @@ i {
   }
 
   .login-container {
-    width: 300px !important;
-    height: 300px !important;
+    width: 100px !important;
+    height: 100px !important;
   }
   h1,
   h2 {
@@ -44,6 +44,11 @@ i {
 
   .aboutPage {
     font-size: 1rem !important;
+  }
+
+  .no-gutters {
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
@@ -217,11 +222,32 @@ i {
     height: 348px;
   }
 
-  .login-container{
+  .login-container {
     width: 444px;
   }
 }
 
+@media (min-width: 586px) and (max-width: 1322px) {
+  .login-container {
+    display: none;
+  }
+  .note {
+    width: 100%;
+  }
+  .pimage {
+    display: none;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 585px) {
+  .login-container {
+    display: none;
+  }
+
+  .pimage {
+    display: none;
+  }
+}
 /* footer */
 .footer {
   height: 40px;
